@@ -46,7 +46,10 @@ Package org.springframework.webflow.engine
   Useful for testing (SWF-307).
 * Ensures that all exceptions (including RuntimeExceptions) are handled properly by the FlowExecution (SWF-333).
 * Ensured the RequestContext attribute map can never be null (SWF-347).
-
+* Renamed TransitionExecutingStateExceptionHandler to TransitionExecutingFlowExecutionExceptionHandler.
+  This handler now exposes the handled flow execution exception under the key "flowExecutionException"
+  instead of the key "stateException (SWF-281). 
+  
 Package org.springframework.webflow.execution
 * Added a holder for the FlowExecutionContext of a request (SWF-163).
 * Made the Event class non-final to allow for extension (SWF-330).
